--- a/calculator.html
+++ b/calculator.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <link rel="stylesheet" href="claculator.css">
+    <link rel="stylesheet" href="calculator.css">
 </head>
 <body>
     <div class="main-body">
@@ -36,6 +36,6 @@
         </div>
     </div>
     </div>
-    <script src="claculator.js"></script>
+    <script src="calculator.js"></script>
 </body>
 </html>
