--- a/calculator.html
+++ b/calculator.html
@@ -1,41 +1,40 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator</title>
-    <link rel="stylesheet" href="calculator.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Calculator</title>
+  <link href="todo.css" rel="stylesheet">
+  <script src="todo.js" defer></script>
 </head>
 <body>
-    <div class="main-body">
-    <h1>Calculator In Html, Css n Js</h1>
-    <div class="container">
-        <input type="text" class="input" >
-        <div class="box">
-                <button class="operator bktn" >+</button>
-                <button class="operator bktn" > - </button>
-                <button class="operator bktn" >/</button>
-                <button class="operator bktn" >%</button>
-                <button class="operator bktn" >*</button>
-                <button class="clear-bktn bktn" >AC</button>
-                <button class="bktn" >7</button>
-                <button class="bktn" >8</button>
-                <button class="bktn" >9</button>
-                <button class="bktn" >4</button>
-                <button class="bktn" >5</button>
-                <button class="bktn" >6</button>
-                <button class="bktn" >1</button>
-                <button class="bktn" >2</button>
-                <button class="bktn" >3</button>
-                <button class="dot-bktn bktn" >.</button>
-                <button class="bktn-zero bktn" >0</button>
-                <button class="result-operator bktn" >=</button>
-              
-        </div>
+  <div class="calculator-grid">
+    <div class="output">
+      <div data-previous-operand class="previous-operand"></div>
+      <div data-current-operand class="current-operand"></div>
     </div>
-    </div>
+    <button data-all-clear class="span-two">AC</button>
+    <button data-delete>DEL</button>
+    <button data-operation>÷</button>
+    <button data-number>1</button>
+    <button data-number>2</button>
+    <button data-number>3</button>
+    <button data-operation>*</button>
+    <button data-number>4</button>
+    <button data-number>5</button>
+    <button data-number>6</button>
+    <button data-operation>+</button>
+    <button data-number>7</button>
+    <button data-number>8</button>
+    <button data-number>9</button>
+    <button data-operation>-</button>
+    <button data-number>.</button>
+    <button data-number>0</button>
+    <button data-equals class="span-two">=</button>
+  </div>
+</body>
+</html>
     <script src="calculator.js"></script>
 </body>
 </html>
